Updated hospital images and HTML pages

--- a/html_files/index.html
+++ b/html_files/index.html
@@ -98,7 +98,7 @@
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/lions_gate_hospital.jpg" alt="Lions Gate Hospital" class="hospital-image img-fluid rounded">
+                <img src="../Images/hospitals/LionsGate.jpeg" alt="Lions Gate Hospital" class="hospital-image img-fluid rounded">
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="col-md-4 text-center">
-                <img src="../Images/north_shore_clinic.jpg" alt="North Shore Health Clinic" class="hospital-image img-fluid rounded">
+                <img src="../Images/hospitals/North Shore.jpeg" alt="North Shore Health Clinic" class="hospital-image img-fluid rounded">
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
       <a href="https://youtu.be/G8BsLlPE1m4?si=_ySvqSgYcFuFSdyn" target="_blank" class="video-card-link text-decoration-none">
         <div class="video-card h-100 border rounded">
           <div class="video-thumbnail position-relative">
-            <img src="https://img.youtube.com/vi/G8BsLlPE1m4/maxresdefault.jpg" 
+            <img src="https://img.youtube.com/vi/G8BsLlPE1m4/mqdefault.jpg" 
                  alt="Gentle Chair Yoga for Seniors" class="img-fluid rounded-top w-100">
             <div class="play-button-overlay">
               <div class="play-icon">▶</div>
