--- a/html_files/SeniorPage.html
+++ b/html_files/SeniorPage.html
@@ -6,59 +6,7 @@
   <title>SilverCare Senior Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    :root {
-      --bg: #f7fafc;
-      --card-bg: #ffffff;
-      --accent: #0b5ed7;
-      --radius: 14px;
-    }
-    body {
-      background: var(--bg);
-      font-family: "Arial", sans-serif;
-      font-size: 1.1rem;
-    }
-    .section-card {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    h1 { font-size: 2.5rem; }
-    h2 { color: var(--accent); font-size: 1.8rem; }
-    .btn-large { font-size: 1.2rem; padding: 14px 28px; }
-    .welcome-banner {
-      background: linear-gradient(135deg, #0b5ed7, #0dcaf0);
-      color: white;
-      border-radius: var(--radius);
-      padding: 3rem 2rem;
-      margin-bottom: 2rem;
-      text-align: center;
-    }
-    .nurse-card {
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-    .nurse-card:hover {
-      transform: scale(1.05);
-      background-color: #f0f8ff;
-    }
-    .calendar-input { font-size: 1.3rem; padding: 0.6rem; width: 100%; }
-    select.form-select { font-size: 1.2rem; padding: 0.6rem; }
-
-    /* Senior-friendly form styles */
-    .senior-form { font-size: 1.2rem; }
-    .senior-form .form-label { font-weight: bold; font-size: 1.3rem; margin-bottom: 0.5rem; }
-    .senior-form .form-control { font-size: 1.2rem; padding: 0.75rem; margin-bottom: 1rem; }
-    .senior-form .form-text { font-size: 1rem; color: #6c757d; }
-    .required-field::after { content: " *"; color: red; }
-    .contact-card { background-color: #f8f9fa; border-left: 4px solid var(--accent); margin-bottom: 1rem; padding: 1rem; }
-    .contact-card .btn { font-size: 1rem; }
-    .help-text { background-color: #e7f3ff; border-radius: 8px; padding: 0.5rem 1rem; margin-bottom: 1rem; font-size: 1.1rem; }
-    .form-section { margin-bottom: 2rem; padding-bottom: 1.5rem; border-bottom: 1px solid #dee2e6; }
-    .form-section:last-child { border-bottom: none; }
-  </style>
+  <link href="../css_files/SeniorPage_style.css" rel="stylesheet">
 </head>
 <body>
 
