--- a/html_files/SeniorPage.html
+++ b/html_files/SeniorPage.html
@@ -6,7 +6,7 @@
   <title>SilverCare Senior Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <link href="../css_files/SeniorPage_style.css" rel="stylesheet">
+  <link href="../css_files/SeniorPage_style.css" rel="stylesheet"/>
 </head>
 <body>
 
