--- a/html_files/logout.html
+++ b/html_files/logout.html
@@ -1,2 +1,5 @@
 <h1 id="welcome"></h1>
 <button class="btn btn-danger" onclick="logout()">Logout</button>
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../javascript_files/logout.js" defer></script>
