--- a/html_files/login.html
+++ b/html_files/login.html
@@ -94,41 +94,6 @@
 
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Inline Script (or move this to JavaScript.js if you prefer) -->
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const dummySenior = { email: "seniortest@silvercare.org", password: "12345" };
-    const dummyNurse  = { email: "nursetest@silvercare.org", password: "admin123" };
-    const loginForm = document.getElementById("loginForm");
-    const messageArea = document.getElementById("messageArea");
-
-    loginForm.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-      messageArea.innerHTML = "";
-
-      if (email === dummySenior.email && password === dummySenior.password) {
-        showMessage("👵 Welcome, SilverCare Resident! Redirecting...", "success");
-        setTimeout(() => window.location.href = "SeniorPage.html", 1500);
-      } 
-      else if (email === dummyNurse.email && password === dummyNurse.password) {
-        showMessage("👩 Welcome, Nurse! Redirecting...", "success");
-        setTimeout(() => window.location.href = "StaffPage.html", 1500);
-      } 
-      else {
-        showMessage("❌ Invalid email or password. Please try again.", "danger");
-      }
-    });
-
-    function showMessage(text, type) {
-      const alertDiv = document.createElement("div");
-      alertDiv.className = `alert alert-${type}`;
-      alertDiv.textContent = text;
-      messageArea.appendChild(alertDiv);
-    }
-  });
-  </script>
+ <script src="../javascript_files/logout.js" defer></script>
 </body>
 </html>
